# meson-project-template

./: .benchmarks.just  .clang-format  .clang-tidy  .clangd  .common_variables.just  .git.just  .hello_world.just  .meta.just  .pre-commit-config.yaml  .pretty.just  .tests.just  flake.nix  justfile  meson.build  project_template.cpp
.github/workflows/: build.yml
benchmarks/: .clang-tidy  benchmarks_runner.cpp  meson.build
benchmarks/calc/: benchmarks.cpp  meson.build
benchmarks/greeter/: benchmarks.cpp  meson.build
bins/hello_world/: hello_world.cpp  meson.build
libs/: meson.build
libs/calc/: calc.cpp  calc.hpp  meson.build
libs/greeter/: greeter.cpp  greeter.hpp  meson.build
tests/: meson.build  tests_runner.cpp
tests/calc/: meson.build  test.cpp
tests/greeter/: meson.build  test.cpp
